# Formula_One_Model

./: .gitignore  AI_RULES.md  CHANGELOG.md  README.md  WORKFLOW_OPERATING_MANUAL.md  alembic.ini  pyproject.toml  requirements.txt
AI_ROLES/: conductor.md  secretary.md  tutor.md
TASKS/: 010-current.md  TASKS_README.md
alembic/: env.py
alembic/versions/: 05ea09b76aed_create_drivers_table.py
changelog.d/: +.added.md  +.changed.md  README.md
docs/adr/: 0001-project-architecture.md  0002-jolpica-canonical-reference-source.md
spec/: decisions.md  requirements.yml
src/: main.py
src/api/v1/: router.py
src/api/v1/endpoints/: health.py
src/f1model/: main.py
src/f1model/api/v1/: driver.py  router.py
src/f1model/api/v1/endpoints/: health.py
src/f1model/db/: deps.py  engine.py  session.py
src/f1model/models/: driver.py
src/f1model/repositories/: driver_repository.py
src/f1model/schemas/: driver.py
src/f1model/services/: driver_service.py
tests/: test_driver_get.py  test_driver_list.py  test_health.py
